--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 </head>
 <body>
 <div id="content">
+    <div id="player-choose">
+        <div id="prompt"><h1>Choose your mark</h1></div>
+        <div id="x-choice" class="button choice">X</div>
+        <div id="o-choice" class="button choice">O</div>
+
+    </div>
     <div id="game">
         <div id="tictactoe">
-            <div id="one" class="cell"><div class="cell-val">x</div></div>
-            <div id="two" class="cell"></div>
-            <div id="three" class="cell"></div><br>
-            <div id="four" class="cell"></div>
-            <div id="five" class="cell"></div>
-            <div id="six" class="cell"></div><br>
-            <div id="seven" class="cell"></div>
-            <div id="eight" class="cell"></div>
-            <div id="nine" class="cell"></div>
+            <div id="one" class="cell"><div class="cell-val"></div></div>
+            <div id="two" class="cell"><div class="cell-val"></div></div>
+            <div id="three" class="cell"><div class="cell-val"></div></div><br>
+            <div id="four" class="cell"><div class="cell-val"></div></div>
+            <div id="five" class="cell"><div class="cell-val"></div></div>
+            <div id="six" class="cell"><div class="cell-val"></div></div><br>
+            <div id="seven" class="cell"><div class="cell-val"></div></div>
+            <div id="eight" class="cell"><div class="cell-val"></div></div>
+            <div id="nine" class="cell"><div class="cell-val"></div></div>
         </div>
     </div>
 </div>
